<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:layout_gravity="center_horizontal"
        android:layout_margin="100dp"
        android:id="@+id/textView6" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_play_screen"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:onClick="goToPlay"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/HiScore"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:onClick="goToHiScore"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:onClick="goToInstructionScreen"/>

</LinearLayout>