<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Instructions"
        android:id="@+id/textView4"
        android:layout_margin="30dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_lore"
        android:textSize="30dp"
        android:textAlignment="center"
        android:id="@+id/textView5"
        android:layout_margin="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.49" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_play_screen"
        android:id="@+id/button6"
        android:onClick="goToPlay"
        android:layout_gravity="center_horizontal" />
</LinearLayout>