<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/TxtResult"
        android:layout_margin="20dp"
        android:id="@+id/TxtTitleResult"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textScore"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:id="@+id/ThrophyContainer"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/nothing"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/CongratText"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:onClick="playAgain"
            android:text="@string/txtPlayAgain"
            android:id="@+id/btnTryAgain"
            android:layout_gravity="left"
            android:layout_margin="20dp"
            />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:id="@+id/btnGoMenu"
            android:onClick="goToMenu"
            android:layout_gravity="right" />

    </LinearLayout>
</LinearLayout>