<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#fff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.06">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/HiScore"
                android:id="@+id/dondeEstoy"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_weight="0.5"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="#000"
                android:typeface="serif"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Counter"
                android:id="@+id/ScoreCounter"
                android:layout_margin="20dp"
                android:layout_weight="0.5"
                android:textColor="#000" />
        </LinearLayout>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="20dp"
            android:id="@+id/imageContainer"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:src="@drawable/thisup1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/TimeCounter"
            android:textSize="30sp"
            android:textColor="#ff0000"
            android:id="@+id/TimerLabel"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:textSize="70sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:id="@+id/textSeconds"
            android:textColor="#ff0000"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>



</FrameLayout>